config/objects/Account.object
<CustomObject>
    <fields>
        <fullName>jigsaw_clean__Automatic_Updates__c</fullName>
        <formula>IF(jigsaw_clean__Automatic_Updates_Disabled__c, &quot;Locked&quot;, &quot;Unlocked&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Jigsaw administrators can enable auto-clean to update your CRM records. Click Lock or Unlock to lock or unlock your CRM records. Jigsaw&apos;s auto-clean function can NOT modify a Locked record. Jigsaw&apos;s auto-clean function can modify an Unlocked record.</inlineHelpText>
        <label>Update Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__CRM_Last_Modified__c</fullName>
        <label>Data.com CRM Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Duplicate_Id__c</fullName>
        <label>Duplicate Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Duplicate__c</fullName>
        <formula>IF (LEN (jigsaw_clean__Duplicate_Id__c )=0,&quot;None Found&quot;, (IMAGE(&quot;/resource/jigsaw_clean__duplicate&quot;, &quot;D&quot;)) + &quot; &quot; + HYPERLINK(&quot;/apex/jigsaw_clean__jigsawAccountDuplicates?id=&quot; + jigsaw_clean__Duplicate_Id__c, &quot;Duplicates Found&quot;, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Jigsaw checks your CRM data to find duplicate records. When duplicate records are found, a link is provided so that you can view the duplicate records. &quot;None Found&quot; is displayed if no duplicates were identified.</inlineHelpText>
        <label>Duplicate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Fresher__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>Fresher</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Graveyard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graveyard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Created_Date__c</fullName>
        <label>Data.com Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Id__c</fullName>
        <label>Data.com Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Last_Modified_Date__c</fullName>
        <label>Data.com Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Last_Sync_Locked__c</fullName>
        <formula>jigsaw_clean__Last_Sync__c</formula>
        <inlineHelpText>This field shows you the last time that Jigsaw&apos;s auto-clean process checked your CRM record against the Jigsaw database.</inlineHelpText>
        <label>Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Managed_Backend__c</fullName>
        <formula>IF( 
OR( 
( jigsaw_clean__Sync_Status__c = &quot;I&quot; ), 
( jigsaw_clean__Sync_Status__c = &quot;O&quot;) 
), 
1,0 
)</formula>
        <label>Managed Backend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Managed__c</fullName>
        <formula>IF(
      OR( ( jigsaw_clean__Sync_Status__c = &quot;I&quot; ) , ( jigsaw_clean__Sync_Status__c = &quot;O&quot; ) ),&quot;Managed&quot; , &quot;Unmanaged&quot; )</formula>
        <label>Managed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Jigsaw_Sync_Activity__c</fullName>
        <label>Sync Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Last_Sync__c</fullName>
        <label>Last Checked Backend</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Silent_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Silent Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Sync_Status_Indicator__c</fullName>
        <formula>IF(jigsaw_clean__Graveyard__c, (IMAGE(&quot;/resource/jigsaw_clean__graveyard&quot;, &quot;G&quot;)) + &quot; Graveyard&quot;,
IF(AND (!jigsaw_clean__Graveyard__c,
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;I&quot; )),
(IMAGE(&quot;/resource/jigsaw_clean__insync&quot;, &quot;I&quot;)) + &quot; Matching&quot;,
IF(AND (!jigsaw_clean__Graveyard__c,
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;O&quot; ),
CONTAINS (jigsaw_clean__Fresher__c, &quot;J&quot;)),
(IMAGE(&quot;/resource/jigsaw_clean__outofsync&quot;, &quot;O&quot;)) + &quot; Different -&quot; + HYPERLINK( &quot;/apex/jigsaw_clean__JStareAndCompare?scontrolCaching=1&amp;id=&quot; &amp; Id,&quot; Data.com Fresher&quot;,&quot;_parent&quot;),
IF(AND (!jigsaw_clean__Graveyard__c,
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;O&quot; ),
CONTAINS (jigsaw_clean__Fresher__c, &quot;C&quot;)),
(IMAGE(&quot;/resource/jigsaw_clean__outofsync&quot;, &quot;O&quot;)) + &quot;Different -&quot; + HYPERLINK( &quot;/apex/jigsaw_clean__JStareAndCompare?scontrolCaching=1&amp;id=&quot; &amp; Id, &quot; Salesforce Fresher&quot;,&quot;_parent&quot;),
IF(AND (!jigsaw_clean__Graveyard__c,
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;U&quot; )),
(IMAGE(&quot;/resource/jigsaw_clean__unmatched&quot;, &quot;U&quot;)) + &quot; Not Found&quot;,
(IMAGE(&quot;/resource/jigsaw_clean__unmatched&quot;, &quot;U&quot;)) + &quot; Not Found&quot;)))))</formula>
        <inlineHelpText>Matching -A Jigsaw managed record exactly matches your CRM record; Different -A Jigsaw managed record partially matches your CRM record; In Graveyard -A CRM record matches a Jigsaw record containing invalid data; Not Found -No matching record was found</inlineHelpText>
        <label>Data.com Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Sync_Status_Summary__c</fullName>
        <formula>IF(jigsaw_clean__Graveyard__c, &quot;Graveyard&quot;, 
IF(AND (!jigsaw_clean__Graveyard__c, 
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;I&quot; )), 
&quot;Matching&quot;, 
IF(AND (!jigsaw_clean__Graveyard__c, 
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;O&quot; )), 
&quot;Different&quot;, 
IF(AND (!jigsaw_clean__Graveyard__c, 
CONTAINS (jigsaw_clean__Sync_Status__c, &quot;U&quot; )), 
&quot;Not Found&quot;, 
&quot;Not Found&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Status Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Sync_Status__c</fullName>
        <label>Update Status Backend</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Seed_Lead__c</columns>
        <columns>Seed_Lead_Outbound_Partial_Shipments__c</columns>
        <columns>Seed_Lead_Outbound_Shipments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Customers &amp; Carriers</label>
    </listViews>
    <listViews>
        <fullName>All_Carriers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Docket__c</columns>
        <columns>Tractors__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Partial_Carrier__c</columns>
        <columns>Qualification_Completed__c</columns>
        <columns>Qualification_Outreach_Begun__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Carrier</value>
        </filters>
        <label>All Carriers</label>
    </listViews>
    <listViews>
        <fullName>All_Partial_Carriers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partial_Carrier__c</columns>
        <columns>Equipment__c</columns>
        <columns>Locations__c</columns>
        <columns>Destinations__c</columns>
        <columns>Qualification_Completed__c</columns>
        <columns>Credit_App_Submitted__c</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Broker_Carrier_Agreement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partial_Carrier__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Partial Carriers</label>
    </listViews>
    <listViews>
        <fullName>Chicago_Customer_Leads</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Partial_Truckload_Shipments_Per_Year__c</columns>
        <columns>Seed_Lead_Outbound_Shipments__c</columns>
        <columns>Seed_Lead_Outbound_Partial_Shipments__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_CITY</field>
            <operation>equals</operation>
            <value>CHICAGO</value>
        </filters>
        <filters>
            <field>Seed_Lead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Seed_Lead_Outbound_Shipments__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Chicago Customer Leads</label>
    </listViews>
    <listViews>
        <fullName>Illinois_Partial_Qualification</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Partial_Carrier__c</columns>
        <columns>Qualification_Completed__c</columns>
        <columns>Tractors__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Carrier</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>IL</value>
        </filters>
        <label>Illinois Partial Qualification List</label>
    </listViews>
    <listViews>
        <fullName>Indiana_Partial_Qualification_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Qualification_Outreach_Begun__c</columns>
        <columns>Qualification_Completed__c</columns>
        <columns>Partial_Carrier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Carrier</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>IN</value>
        </filters>
        <label>Indiana Partial Qualification List</label>
    </listViews>
    <listViews>
        <fullName>Iowa_Partial_Qualification_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Qualification_Completed__c</columns>
        <columns>Partial_Carrier__c</columns>
        <columns>Qualification_Outreach_Begun__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>IA</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Carrier</value>
        </filters>
        <label>Iowa Partial Qualification List</label>
    </listViews>
    <listViews>
        <fullName>Massachusetts_Partial_Qualification_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Qualification_Outreach_Begun__c</columns>
        <columns>Qualification_Completed__c</columns>
        <columns>Partial_Carrier__c</columns>
        <columns>Tractors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Carrier</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>MA</value>
        </filters>
        <label>Massachusetts Partial Qualification List</label>
    </listViews>
    <listViews>
        <fullName>Michigan_Partial_Qualification_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Partial_Carrier__c</columns>
        <columns>Qualification_Completed__c</columns>
        <columns>Qualification_Outreach_Begun__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Carrier</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>MI</value>
        </filters>
        <label>Michigan Partial Qualification List</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Partial_Carriers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Credit_App_Submitted__c</columns>
        <columns>Qualification_Completed__c</columns>
        <columns>Locations__c</columns>
        <columns>Destinations__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Carrier</value>
        </filters>
        <filters>
            <field>Partial_Carrier__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Partial Carriers</label>
    </listViews>
    <listViews>
        <fullName>Partial_Carrier_Qualification_List_IL</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Tractors__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Qualification_Completed__c</columns>
        <columns>Partial_Carrier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Carrier</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>IL</value>
        </filters>
        <label>Partial Carrier Qualification List - IL</label>
    </listViews>
    <listViews>
        <fullName>Partial_Truckload_Carriers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Partial_Carrier__c</columns>
        <columns>Locations__c</columns>
        <columns>Destinations__c</columns>
        <columns>Qualification_Completed__c</columns>
        <columns>Broker_Carrier_Agreement__c</columns>
        <columns>Status__c</columns>
        <columns>Auto_Send_Rate_Quotes_When_Matched__c</columns>
        <columns>Email__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partial_Carrier__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partial Truckload Carriers</label>
    </listViews>
    <listViews>
        <fullName>Partial_Truckload_Carriers_w_Spot_Email</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email__c</columns>
        <columns>Locations__c</columns>
        <columns>Destinations__c</columns>
        <columns>Tractors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Carrier</value>
        </filters>
        <filters>
            <field>Auto_Send_Rate_Quotes_When_Matched__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partial Truckload Carriers w/ Spot Email</label>
    </listViews>
    <listViews>
        <fullName>Partial_Truckload_Shippers_Lead_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Seed_Lead_Outbound_Shipments__c</columns>
        <columns>Seed_Lead_Outbound_Partial_Shipments__c</columns>
        <columns>Seed_Lead_Inbound_Shipments__c</columns>
        <columns>Seed_Lead_Inbound_Partial_Shipments__c</columns>
        <columns>Seed_Lead_Billto_Shipments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Seed_Lead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Seed_Lead_Outbound_Partial_Shipments__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Partial Truckload Shippers Lead List</label>
    </listViews>
    <namedFilters>
        <fullName>Opportunity_00N30000006HQjnEAG</fullName>
        <active>true</active>
        <field>Opportunity.Carrier__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Carrier</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_Transportation Carrier</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00N30000006HQjxEAG</fullName>
        <active>true</active>
        <field>Opportunity.Insurer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Insurer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_Insurer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000DqAJMA0_00NT0000001YnoJMAS</fullName>
        <active>true</active>
        <field>Inspection__c.Carrier__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Carrier</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Inspection_Carrier</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000DqedMAC_00NT0000001YvJOMA0</fullName>
        <active>true</active>
        <field>Shipment__c.Customer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Shipment_Customer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000Dr8JMAS_00NT0000001Z3C7MAK</fullName>
        <active>true</active>
        <errorMessage>Carrier invites must be made to carriers.</errorMessage>
        <field>CarrierInvitation__c.Carrier__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Carrier</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Carrier Invitation_Carrier</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000DtDrMAK_00NT0000001ZpYSMA0</fullName>
        <active>true</active>
        <field>Opportunity__c.Customer__c</field>
        <filterItems>
            <field>Account.Is_Reseller__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_Customer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000Due1MAC_00NT0000001ZpYhMAK</fullName>
        <active>true</active>
        <field>Office__c.Company__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <filterItems>
            <field>Account.Is_Reseller__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Office_Company</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000DvP5MAK_00NT0000001ZxfeMAC</fullName>
        <active>true</active>
        <errorMessage>Offers can only be made to carriers.</errorMessage>
        <field>Offer__c.Carrier__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Carrier</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Offer_Carrier</name>
    </namedFilters>
    <recordTypes>
        <fullName>Carrier</fullName>
        <active>true</active>
        <label>Carrier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
</CustomObject>